; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ldns/extr_dnssec_sign.c_ldns_sign_public_rsasha1.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ldns/extr_dnssec_sign.c_ldns_sign_public_rsasha1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LDNS_MAX_PACKETLEN = common dso_local global i32 0, align 4
@NID_sha1 = common dso_local global i32 0, align 4
@SHA_DIGEST_LENGTH = common dso_local global i32 0, align 4
@LDNS_RDF_TYPE_B64 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ldns_sign_public_rsasha1(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 0, i32* %7, align 4
  %11 = load i32, i32* @LDNS_MAX_PACKETLEN, align 4
  %12 = call i32* @ldns_buffer_new(i32 %11)
  store i32* %12, i32** %9, align 8
  %13 = load i32*, i32** %9, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %51

16:                                               ; preds = %2
  %17 = load i32*, i32** %4, align 8
  %18 = call i64 @ldns_buffer_begin(i32* %17)
  %19 = inttoptr i64 %18 to i8*
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @ldns_buffer_position(i32* %20)
  %22 = call i8* @SHA1(i8* %19, i32 %21, i32* null)
  store i8* %22, i8** %6, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = icmp ne i8* %23, null
  br i1 %24, label %28, label %25

25:                                               ; preds = %16
  %26 = load i32*, i32** %9, align 8
  %27 = call i32 @ldns_buffer_free(i32* %26)
  store i32* null, i32** %3, align 8
  br label %51

28:                                               ; preds = %16
  %29 = load i32, i32* @NID_sha1, align 4
  %30 = load i8*, i8** %6, align 8
  %31 = load i32, i32* @SHA_DIGEST_LENGTH, align 4
  %32 = load i32*, i32** %9, align 8
  %33 = call i64 @ldns_buffer_begin(i32* %32)
  %34 = inttoptr i64 %33 to i8*
  %35 = load i32*, i32** %5, align 8
  %36 = call i32 @RSA_sign(i32 %29, i8* %30, i32 %31, i8* %34, i32* %7, i32* %35)
  store i32 %36, i32* %10, align 4
  %37 = load i32, i32* %10, align 4
  %38 = icmp ne i32 %37, 1
  br i1 %38, label %39, label %42

39:                                               ; preds = %28
  %40 = load i32*, i32** %9, align 8
  %41 = call i32 @ldns_buffer_free(i32* %40)
  store i32* null, i32** %3, align 8
  br label %51

42:                                               ; preds = %28
  %43 = load i32, i32* @LDNS_RDF_TYPE_B64, align 4
  %44 = load i32, i32* %7, align 4
  %45 = load i32*, i32** %9, align 8
  %46 = call i64 @ldns_buffer_begin(i32* %45)
  %47 = call i32* @ldns_rdf_new_frm_data(i32 %43, i32 %44, i64 %46)
  store i32* %47, i32** %8, align 8
  %48 = load i32*, i32** %9, align 8
  %49 = call i32 @ldns_buffer_free(i32* %48)
  %50 = load i32*, i32** %8, align 8
  store i32* %50, i32** %3, align 8
  br label %51

51:                                               ; preds = %42, %39, %25, %15
  %52 = load i32*, i32** %3, align 8
  ret i32* %52
}

declare dso_local i32* @ldns_buffer_new(i32) #1

declare dso_local i8* @SHA1(i8*, i32, i32*) #1

declare dso_local i64 @ldns_buffer_begin(i32*) #1

declare dso_local i32 @ldns_buffer_position(i32*) #1

declare dso_local i32 @ldns_buffer_free(i32*) #1

declare dso_local i32 @RSA_sign(i32, i8*, i32, i8*, i32*, i32*) #1

declare dso_local i32* @ldns_rdf_new_frm_data(i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
